2002-04-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* config.guess: New upstream version.
	* config.sub: Likewise.
	
2002-04-20  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/config.c (PCI_NIC) [INCLUDE_DAVICOM]: Fix typos.
	Reported by Julien Perrot <julien.perrot@iie.cnam.fr>.
	
2002-04-17  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c [SUPPORT_SERIAL] (terminal_func): Set
	COUNT_LINES to -1, to disable the pager.
	
2002-04-16  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (Obtaining and Building GRUB): Update the link
	to the binutils site.

2002-04-06  Pavel Roskin  <proski@gnu.org>

	* util/grub-install.in: Fix hardcoded /dev/hda1.

2002-04-06  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c [GRUB_UTIL] (dump_func): New function.
	[GRUB_UTIL] (builtin_dump): New variable.
	(builtin_table) [GRUB_UTIL]: Added a pointer to BUILTIN_DUMP.
	* util/grub-install.in: Make sure that GRUB reads the same
	images as the host operating system by comparing the result of
	running the command "dump" with the contents of the OS file.
	
2002-04-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (setup_func): Don't embed a drive number, if
	unnecessary.
	
2002-03-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (General commands): Added ``pager'' into the
	menu.
	(pager): New subsection.
	(terminal): Added a description about the option
	``--lines=LINES''.

	* configure.in (AC_INIT_AUTOMAKE): Set the version number to
	0.92.
	
2002-03-26  Yoshinori K. Okuji  <okuji@enbug.org>

	* netboot/eepro100.c (eepro100_probe): Increase the delay at the
	initialization.
	
2002-03-26  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (linux_mem_size): New variable.
	(load_image): Check a mem= option and set LINUX_MEM_SIZE to the
	specified memory size, if any. Otherwise, to zero. When an
	overflow is detected, use LINUX_INITRD_MAX_ADDRESS instead.
	(load_initrd): If LINUX_MEM_SIZE is non-zero, use it instead of