@@ -38,6 +38,7 @@ Hal Snyder <hal@vailsys.com>
 HASEGAWA Tomoki <thasegawa@mta.biglobe.ne.jp>
 Heikki Vatiainen <hessu@cs.tut.fi>
 Heiko Schroeder <heiko@pool.informatik.rwth-aachen.de>
+Henrik Nordstrom <hno@marasystems.com>
 Herbert Nachtnebel <nachtneb@iaee.tuwien.ac.at>
 Hisazumi Kenji <nel@soraneko.com>
 HORIKAWA Kazunori <kaz-hori@tkd.att.ne.jp>
