@@ -1,4 +1,4 @@
-@set UPDATED 16 April 2002
+@set UPDATED 29 April 2002
 @set UPDATED-MONTH April 2002
 @set EDITION 0.92
 @set VERSION 0.92
