@@ -17,6 +17,8 @@ New in 0.92:
 * The command "terminal" accepts a new option, "--lines=LINES". You can
   set the maximum number of lines arbitrarily with this option. If you
   don't specify it, the maximum number will be 24.
+* The command "terminal" accepts another new option, "--silent". You can
+  suppress the "Press any key to continue" message with this option.
 * The mem= option for Linux is recognized and used to limit the maximum
   address of initrd.
 * A fallback entry is executed immediately after a default entry,
